crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@79.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT pg_get_functiondef('functest_S_13'::regproc);"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..50
    FuncCall@7..50
      Ident@7..25 "pg_get_functiondef"
      Ascii40@25..26 "("
      TypeCast@26..50
        AConst@26..41
          Sconst@26..41 "'functest_S_13'"
        Typecast@41..43 "::"
        TypeName@43..50
          Ident@43..50 "regproc"
  Ascii41@50..51 ")"
  Ascii59@51..52 ";"

