crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@8.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT proname, prorettype::regtype, proargtypes::regtype[] FROM pg_proc\n       WHERE oid in ('functest_A_1'::regproc,\n                     'functest_A_2'::regproc,\n                     'functest_A_3'::regproc) ORDER BY proname;"
---
SelectStmt@0..228
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..14
    ColumnRef@7..14
      Ident@7..14 "proname"
  Ascii44@14..15 ","
  Whitespace@15..16 " "
  ResTarget@16..35
    TypeCast@16..35
      ColumnRef@16..26
        Ident@16..26 "prorettype"
      Typecast@26..28 "::"
      TypeName@28..35
        Ident@28..35 "regtype"
  Ascii44@35..36 ","
  Whitespace@36..37 " "
  ResTarget@37..57
    TypeCast@37..57
      ColumnRef@37..48
        Ident@37..48 "proargtypes"
      Typecast@48..50 "::"
      TypeName@50..57
        Ident@50..57 "regtype"
  Ascii91@57..58 "["
  Ascii93@58..59 "]"
  Whitespace@59..60 " "
  From@60..64 "FROM"
  Whitespace@64..65 " "
  RangeVar@65..72
    Ident@65..72 "pg_proc"
  Newline@72..73 "\n"
  Whitespace@73..80 "       "
  Where@80..85 "WHERE"
  Whitespace@85..86 " "
  AExpr@86..209
    ColumnRef@86..89
      Ident@86..89 "oid"
    Whitespace@89..90 " "
    InP@90..92 "in"
    Whitespace@92..93 " "
    Ascii40@93..94 "("
    List@94..209
      TypeCast@94..117
        AConst@94..108
          Sconst@94..108 "'functest_A_1'"
        Typecast@108..110 "::"
        TypeName@110..117
          Ident@110..117 "regproc"
      Ascii44@117..118 ","
      Newline@118..119 "\n"
      Whitespace@119..140 "                     "
      TypeCast@140..163
        AConst@140..154
          Sconst@140..154 "'functest_A_2'"
        Typecast@154..156 "::"
        TypeName@156..163
          Ident@156..163 "regproc"
      Ascii44@163..164 ","
      Newline@164..165 "\n"
      Whitespace@165..186 "                     "
      TypeCast@186..209
        AConst@186..200
          Sconst@186..200 "'functest_A_3'"
        Typecast@200..202 "::"
        TypeName@202..209
          Ident@202..209 "regproc"
  Ascii41@209..210 ")"
  Whitespace@210..211 " "
  SortBy@211..227
    Order@211..216 "ORDER"
    Whitespace@216..217 " "
    By@217..219 "BY"
    Whitespace@219..220 " "
    ColumnRef@220..227
      Ident@220..227 "proname"
  Ascii59@227..228 ";"

