crates/pg_syntax/tests/snapshots/postgres_regress/create_function_sql@85.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE VIEW functestv3 AS SELECT * FROM functest3;
---
ViewStmt@0..50
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "functestv3"
  Whitespace@22..23 " "
  As@23..25 "AS"
  Whitespace@25..26 " "
  SelectStmt@26..49
    Select@26..32 "SELECT"
    Whitespace@32..33 " "
    ResTarget@33..34
      ColumnRef@33..34
        AStar@33..34
          Ascii42@33..34 "*"
    Whitespace@34..35 " "
    From@35..39 "FROM"
    Whitespace@39..40 " "
    RangeVar@40..49
      Ident@40..49 "functest3"
  Ascii59@49..50 ";"

